--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
-    "name": "super-gif",
-    "version": "1.0.0",
+    "name": "@wizpanda/super-gif",
+    "version": "0.0.1",
     "description": "GIF parser & player in Typescript to work with node_modules (converted from https://github.com/buzzfeed/libgif-js)",
-    "main": "index.js",
+    "main": "dist/super-gif.js",
+    "type": "dist/super-gif.d.ts",
     "scripts": {
+        "build": "tsc",
+        "version": "npm run build",
+        "postversion": "git push && git push --tags",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
