--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "type": "dist/super-gif.d.ts",
     "scripts": {
         "build": "tsc",
-        "version": "npm run build",
+        "version": "npm run build && npm publish --access public",
         "postversion": "git push && git push --tags",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
