--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "type": "dist/super-gif.d.ts",
     "scripts": {
         "build": "tsc",
+        "preversion": "git add CHANGELOG.md",
         "version": "npm run build && npm publish --access public",
         "postversion": "git push && git push --tags",
         "test": "echo \"Error: no test specified\" && exit 1"
