--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
     "name": "@wizpanda/super-gif",
-    "version": "0.0.5",
+    "version": "0.0.6",
     "description": "GIF parser & player in Typescript to work with node_modules (converted from https://github.com/buzzfeed/libgif-js)",
     "main": "dist/super-gif.js",
     "type": "dist/super-gif.d.ts",
     "scripts": {
         "build": "tsc",
         "preversion": "git add CHANGELOG.md",
-        "version": "npm run build && npm publish --access public",
+        "version": "npm run build",
         "postversion": "git push && git push --tags",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
